--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Waleed Ahmad</title>
 	<link rel="stylesheet" href="/assets/css/style.css" media="screen" charset="utf-8">
 	<link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" media="screen" charset="utf-8">
+	<meta name="viewport"
+		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 	<div class="wrapper">
